[package]
name = "hello-rust"
version = "0.1.0"
authors = ["zhengshaodong <ngxcorpio@gmail.com>"]

[dependencies]
tokio = "0.1.5"
tokio-io = "0.1.6"

[[bin]]
name = "hello-world"
path = "src/bin/hello-world.rs"

[[bin]]
name = "hello-tokio"
path = "src/bin/hello-tokio.rs"

[[bin]]
name = "tokio-print-each-packet"
path = "src/bin/tokio-print-each-packet.rs"
