[package]
name = "hello-rust"
version = "0.1.0"
authors = ["zhengshaodong <ngxcorpio@gmail.com>"]

[dependencies]
tokio = "0.1.5"
tokio-io = "0.1.6"

[[bin]]
name = "tokio-hello-world"
path = "src/bin/tokio-hello-world.rs"

[[bin]]
name = "tokio-hello-tokio"
path = "src/bin/tokio-hello-tokio.rs"

[[bin]]
name = "tokio-print-each-packet"
path = "src/bin/tokio-print-each-packet.rs"
