[package]
name = "basic-tutorial"
version = "0.1.0"
authors = ["zhengshaodong <ngxcorpio@gmail.com>"]

[dependencies]

[[bin]]
name = "function_test"
path = "src/function_test.rs"

[[bin]]
name = "control_flow_test"
path = "src/control_flow_test.rs"

[[bin]]
name = "ownership_test"
path = "src/ownership_test.rs"

[[bin]]
name = "references_and_borrowing_test"
path = "src/references_and_borrowing_test.rs"
