[package]
name = "basic-tutorial"
version = "0.1.0"
authors = ["zhengshaodong <ngxcorpio@gmail.com>"]

[dependencies]

[[bin]]
name = "function_test"
path = "src/function_test.rs"

[[bin]]
name = "control_flow_test"
path = "src/control_flow_test.rs"

[[bin]]
name = "ownership_test"
path = "src/ownership_test.rs"

[[bin]]
name = "references_and_borrowing_test"
path = "src/references_and_borrowing_test.rs"

[[bin]]
name = "slice_test"
path = "src/slice_test.rs"

[[bin]]
name = "struct_test"
path = "src/struct_test.rs"

[[bin]]
name = "method_test"
path = "src/method_test.rs"

[[bin]]
name = "enum_test"
path = "src/enum_test.rs"

[[bin]]
name = "match_test"
path = "src/match_test.rs"

[[bin]]
name = "vectors_test"
path = "src/vectors_test.rs"

[[bin]]
name = "strings_test"
path = "src/strings_test.rs"
