[package]
name = "basic-tutorial"
license = "MIT"
version = "0.1.0"
authors = ["zhengshaodong <ngxcorpio@gmail.com>"]
description = "basic-tutorial"

[dependencies]

[[bin]]
name = "function_test"
path = "src/function_test.rs"

[[bin]]
name = "control_flow_test"
path = "src/control_flow_test.rs"

[[bin]]
name = "ownership_test"
path = "src/ownership_test.rs"

[[bin]]
name = "references_and_borrowing_test"
path = "src/references_and_borrowing_test.rs"

[[bin]]
name = "slice_test"
path = "src/slice_test.rs"

[[bin]]
name = "struct_test"
path = "src/struct_test.rs"

[[bin]]
name = "method_test"
path = "src/method_test.rs"

[[bin]]
name = "enum_test"
path = "src/enum_test.rs"

[[bin]]
name = "match_test"
path = "src/match_test.rs"

[[bin]]
name = "vectors_test"
path = "src/vectors_test.rs"

[[bin]]
name = "strings_test"
path = "src/strings_test.rs"

[[bin]]
name = "map_test"
path = "src/map_test.rs"

[[bin]]
name = "panic_test"
path = "src/panic_test.rs"

[[bin]]
name = "traits_test"
path = "src/traits_test.rs"

[[bin]]
name = "lifetimes_test"
path = "src/lifetimes_test.rs"

[[bin]]
name = "closures_test"
path = "src/closures_test.rs"

[[bin]]
name = "iterators_test"
path = "src/iterators_test.rs"

[[bin]]
name = "box_test"
path = "src/box_test.rs"

[[bin]]
name = "drop_test"
path = "src/drop_test.rs"

[[bin]]
name = "rc_test"
path = "src/rc_test.rs"

[[bin]]
name = "thread_test"
path = "src/thread_test.rs"

[[bin]]
name = "message_passing_test"
path = "src/message_passing_test.rs"

[[bin]]
name = "shared_state_test"
path = "src/shared_state_test.rs"

[[bin]]
name = "unsafe_test"
path = "src/unsafe_test.rs"
